--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.2.1",
     "@types/node": "20.4.2",
     "@types/react": "18.2.28",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.2.1",
     "typescript": "5.2.2"
   }
 }
