--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.2.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "20.4.2",
     "@types/react": "18.2.28",
     "autoprefixer": "^10.4.24",
